[refs #30858] Add role isDeactivated checks.
Fix role-status display after save.

--- a/be/ldapadmin/www/style.css
+++ b/be/ldapadmin/www/style.css
@@ -793,6 +793,9 @@ div#role-status {
 	display: inline-block;
 	margin: 0.5em;
 }
+div#role-status:empty {
+	display: none;
+}
 div#role-description{
 	clear: both;
 	white-space-collapse: preserve;
